--- a/servantSample.cabal
+++ b/servantSample.cabal
@@ -25,13 +25,38 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      App
+      CrudSqlite
+      MkTodoJquery
+      Model
+      Todo
+      TodoClient
   other-modules:
       Paths_servantSample
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , aeson
+    , base >=4.7 && <5
+    , bytestring
+    , directory
+    , hspec
+    , http-api-data
+    , http-client
+    , http-conduit
+    , http-media
+    , lens
+    , lucid
+    , safe-exceptions
+    , servant
+    , servant-client
+    , servant-js
+    , servant-lucid
+    , servant-server
+    , sqlite-simple
+    , text
+    , warp
   default-language: Haskell2010
 
 executable servantSample-exe
@@ -42,8 +67,28 @@ executable servantSample-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , aeson
+    , base >=4.7 && <5
+    , bytestring
+    , directory
+    , hspec
+    , http-api-data
+    , http-client
+    , http-conduit
+    , http-media
+    , lens
+    , lucid
+    , safe-exceptions
+    , servant
+    , servant-client
+    , servant-js
+    , servant-lucid
+    , servant-server
     , servantSample
+    , sqlite-simple
+    , text
+    , warp
   default-language: Haskell2010
 
 test-suite servantSample-test
@@ -55,6 +100,26 @@ test-suite servantSample-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , aeson
+    , base >=4.7 && <5
+    , bytestring
+    , directory
+    , hspec
+    , http-api-data
+    , http-client
+    , http-conduit
+    , http-media
+    , lens
+    , lucid
+    , safe-exceptions
+    , servant
+    , servant-client
+    , servant-js
+    , servant-lucid
+    , servant-server
     , servantSample
+    , sqlite-simple
+    , text
+    , warp
   default-language: Haskell2010
