--- a/servantSample.cabal
+++ b/servantSample.cabal
@@ -29,6 +29,7 @@ library
       CrudSqlite
       MkTodoJquery
       Model
+      Time
       Todo
       TodoClient
   other-modules:
@@ -56,6 +57,7 @@ library
     , servant-server
     , sqlite-simple
     , text
+    , time
     , warp
   default-language: Haskell2010
 
@@ -88,6 +90,7 @@ executable servantSample-exe
     , servantSample
     , sqlite-simple
     , text
+    , time
     , warp
   default-language: Haskell2010
 
@@ -121,5 +124,6 @@ test-suite servantSample-test
     , servantSample
     , sqlite-simple
     , text
+    , time
     , warp
   default-language: Haskell2010
